--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                 </div>
                                 <h1>PenCraft</h1>
                                     <div class="Pf_1_img">
-                                        <a href="https://sweet-croquembouche-b8a146.netlify.app" target="_blank" rel="noopener noreferrer"><img src="piccc/Screenshot 2024-11-04 170319.png" alt=""></a>
+                                        <a href="https://pen-pasathorn.netlify.app/" target="_blank" rel="noopener noreferrer"><img src="piccc/Screenshot 2024-11-04 170319.png" alt=""></a>
                                     </div>
                                     <div class="Pen_info">
                                                 <p>
@@ -79,7 +79,7 @@
                                                         (Responsive)
                                                 </p>
                                             <div class="btn_pf_1">
-                                            <a href="https://sweet-croquembouche-b8a146.netlify.app" target="_blank" rel="noopener noreferrer"> <button class="btn_L_1">เข้าชมเว็บไซต์</button></a>
+                                            <a href="https://pen-pasathorn.netlify.app/" target="_blank" rel="noopener noreferrer"> <button class="btn_L_1">เข้าชมเว็บไซต์</button></a>
                                                 <a href="https://github.com/Pheet0123/PenCraft-Web" target="_blank" rel="noopener noreferrer"><button class="btn_GitHub">GitHub</button></a>
                                             </div>
                                     </div>
@@ -87,18 +87,18 @@
 
                             <div class="container_Performance_2">
                                 <div class="pf_2">
-                                    <a href="https://astonishing-treacle-df2aea.netlify.app" target="_blank" rel="noopener noreferrer"><img src="piccc/Screenshot 2024-11-04 180035.png" alt=""></a>
+                                    <a href="https://bmi-cal-pasathorn.netlify.app/" target="_blank" rel="noopener noreferrer"><img src="piccc/Screenshot 2024-11-04 180035.png" alt=""></a>
                                     <div class="BMI_info">
                                         <h1>เว็บหาค่าดัชนีมวลกาย</h1>
                                         <p>เกิดจากการที่ผมเป็นคนชอบออกกำลังกายแล้วที่ผมไปอ่านวิธีออกกำลังกายที่มาหลายๆวิธีผมก็ได้ไปเจอว่าวิธีการแบ่งเกณว่าน้ำหนักตัวเรา</p>
                                         <div class="btn_pf_2">
-                                            <a href="https://astonishing-treacle-df2aea.netlify.app" target="_blank" rel="noopener noreferrer"><button class="btn_L_2">เข้าชมเว็บไซต์</button></a>
+                                            <a href="https://bmi-cal-pasathorn.netlify.app/" target="_blank" rel="noopener noreferrer"><button class="btn_L_2">เข้าชมเว็บไซต์</button></a>
                                             <a href="https://github.com/Pheet0123/Bmi_cal" target="_blank" rel="noopener noreferrer"><button class="btn_GitHub">GitHub</button></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="btn_pf_2_phon">
-                                    <a href="https://astonishing-treacle-df2aea.netlify.app" target="_blank" rel="noopener noreferrer"><button class="btn_L_2_phon"><p>เข้าชมเว็บไซต์</p></button></a>
+                                    <a href="https://bmi-cal-pasathorn.netlify.app/" target="_blank" rel="noopener noreferrer"><button class="btn_L_2_phon"><p>เข้าชมเว็บไซต์</p></button></a>
                                             <a href="https://github.com/Pheet0123/Bmi_cal" target="_blank" rel="noopener noreferrer"><button class="btn_GitHub_phon"><p>GitHub</p></button></a>
                                 </div>
                             </div>
@@ -109,14 +109,14 @@
                                     <h1>เครื่องคิดเลข</h1>
                                     <p>เครื่องคิดเลขออนไลน์นี้สร้างขึ้นมาเพื่อให้การคำนวณเป็นเรื่องง่ายสุดๆแค่เปิดเว็บก็ใช้งานได้เลยมีฟังก์ชันพื้นฐานครบ</p>
                                     <div class="btn_pf_2">
-                                        <a href="https://tangerine-hotteok-8dbe16.netlify.app" target="_blank" rel="noopener noreferrer"><button class="btn_L_3">เข้าชมเว็บไซต์</button></a>
+                                        <a href="https://cal-pasathorn.netlify.app/" target="_blank" rel="noopener noreferrer"><button class="btn_L_3">เข้าชมเว็บไซต์</button></a>
                                         <a href="https://github.com/Pheet0123/Calculator" target="_blank" rel="noopener noreferrer"><button class="btn_GitHub">GitHub</button></a>
                                     </div>
                                 </div>
-                                <a href="https://tangerine-hotteok-8dbe16.netlify.app" target="_blank" rel="noopener noreferrer"> <img src="piccc/Screenshot 2024-11-04 182210.png" alt=""></a>
+                                <a href="https://cal-pasathorn.netlify.app/" target="_blank" rel="noopener noreferrer"> <img src="piccc/Screenshot 2024-11-04 182210.png" alt=""></a>
                                 </div> 
                                 <div class="btn_pf_3_phon">
-                                    <a href="https://tangerine-hotteok-8dbe16.netlify.app" target="_blank" rel="noopener noreferrer"><button class="btn_L_2_phon"><p>เข้าชมเว็บไซต์</p></button></a>
+                                    <a href="https://cal-pasathorn.netlify.app/" target="_blank" rel="noopener noreferrer"><button class="btn_L_2_phon"><p>เข้าชมเว็บไซต์</p></button></a>
                                     <a href="https://github.com/Pheet0123/Bmi_cal" target="_blank" rel="noopener noreferrer"><button class="btn_GitHub_phon"><p>GitHub</p></button></a>
                                 </div>
                         </div>
@@ -125,18 +125,18 @@
 
                             <div class="container_Performance_2">
                                         <div class="pf_3">
-                                        <a class="connnn" href="https://keen-baklava-ae33de.netlify.app" target="_blank" rel="noopener noreferrer"><img class="acc" src="piccc/Screenshot 2024-11-04 182858.png" alt=""></a>
+                                        <a class="connnn" href="https://temperature-pasathorn.netlify.app/" target="_blank" rel="noopener noreferrer"><img class="acc" src="piccc/Screenshot 2024-11-04 182858.png" alt=""></a>
                                         <div class="BMI_info">
                                             <h1>เว็บแปลงอุณหภูมิ</h1>
                                             <p>ทำเว็บนี้ขึ้นมาเพื่อให้ทุกคนสามารถแปลงค่าได้สะดวกแค่ใส่ค่าระบบจะแสดงผลในหน่วยอื่นๆทันที</p>
                                             <div class="btn_pf_3">
-                                                <a href="https://keen-baklava-ae33de.netlify.app" target="_blank" rel="noopener noreferrer"><button class="btn_L_4">เข้าชมเว็บไซต์</button></a>
+                                                <a href="https://temperature-pasathorn.netlify.app/" target="_blank" rel="noopener noreferrer"><button class="btn_L_4">เข้าชมเว็บไซต์</button></a>
                                                 <a href="https://github.com/Pheet0123/Temperaluer_Converter" target="_blank" rel="noopener noreferrer"><button class="btn_GitHub">GitHub</button></a>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="btn_pf_3_phon">
-                                        <a href="https://keen-baklava-ae33de.netlify.app/" target="_blank" rel="noopener noreferrer"><button class="btn_L_2_phon"><p>เข้าชมเว็บไซต์</p></button></a>
+                                        <a href="https://temperature-pasathorn.netlify.app/" target="_blank" rel="noopener noreferrer"><button class="btn_L_2_phon"><p>เข้าชมเว็บไซต์</p></button></a>
                                         <a href="https://github.com/Pheet0123/Bmi_cal" target="_blank" rel="noopener noreferrer"><button class="btn_GitHub_phon"><p>GitHub</p></button></a>
                                     </div>
                                 </div>
@@ -149,34 +149,34 @@
                                                     <h1>โปรแกรมเครื่องคิดเลข</h1>
                                                     <p>เครื่องคิดเลขนี้ มีฟังก์ชันพื้นฐานและขั้นสูงครบครัน เช่น บวก ลบ คูณ หาร ยกกำลัง และหาค่ากลับ มีปุ่ม "Clear" สำหรับล้างค่าทั้งหมดและปุ่ม "Quit" สำหรับปิดโปรแกรม</p>
                                                     <div class="btn_pf_6">
-                                                        <a href="https://tangerine-hotteok-8dbe16.netlify.app/" target="_blank" rel="noopener noreferrer"><button class="btn_L_6">เข้าชมเว็บไซต์</button></a>
-                                                        <a href="https://github.com/Pheet0123/Calculator" target="_blank" rel="noopener noreferrer"><button class="btn_GitHub">GitHub</button></a>
+                                                        <a href="Calculator.zip" target="_blank" rel="noopener noreferrer"><button class="btn_L_6">ดาวน์โหลด</button></a>
+                                                        <a href="https://github.com" target="_blank" rel="noopener noreferrer"><button class="btn_GitHub">GitHub</button></a>
                                                     </div>
                                                 </div>
-                                            <a href="https://tangerine-hotteok-8dbe16.netlify.app" target="_blank" rel="noopener noreferrer"> <img src="piccc/Screenshot 2024-11-08 191158.png" alt=""></a>
+                                            <a href="Calculator.zip" target="_blank" rel="noopener noreferrer"> <img src="piccc/Screenshot 2024-11-08 191158.png" alt=""></a>
                                         
                                     </div>
                                     <div class="btn_pf_3_phon">
-                                        <a href="https://tangerine-hotteok-8dbe16.netlify.app" target="_blank" rel="noopener noreferrer"><button class="btn_L_2_phon"><p>เข้าชมเว็บไซต์</p></button></a>
-                                        <a href="https://github.com/Pheet0123/Bmi_cal" target="_blank" rel="noopener noreferrer"><button class="btn_GitHub_phon"><p>GitHub</p></button></a>
+                                        <a href="Calculator.zip" target="_blank" rel="noopener noreferrer"><button class="btn_L_2_phon"><p>ดาวน์โหลด</p></button></a>
+                                        <a href="https://github.com" target="_blank" rel="noopener noreferrer"><button class="btn_GitHub_phon"><p>GitHub</p></button></a>
                                     </div>
                                 </div> 
     
                                 <div class="container_Performance_8">
                                         <div class="pf_8">
-                                            <a href="https://astonishing-treacle-df2aea.netlify.app" target="_blank" rel="noopener noreferrer"><img src="piccc/Screenshot 2024-11-10 192105.png" alt=""></a>
+                                            <a href="Note.zip" target="_blank" rel="noopener noreferrer"><img src="piccc/Screenshot 2024-11-10 192105.png" alt=""></a>
                                             <div class="BMI_info">
                                                     <h1>โปรแกรมสมุดโน็ต</h1>
-                                                    <p>โปรแกรมนี้เป็นเครื่องมือที่สามารถใช้บันทึกข้อมูลหรือข้อความพร้อมทั้งมีฟังก์ชันในการปรับขนาดและฟอนต์ของข้อความตามที่ต้องการ</p>
+                                                    <p>โปรแกรมนี้เป็นเครื่องมือที่สามารถใช้บันทึกข้อมูลหรือข้อความ พร้อมทั้งมีฟังก์ชันในการปรับขนาดและฟอนต์ของข้อความตามที่ต้องการ</p>
                                                 <div class="btn_pf_2">
-                                                    <a href="https://astonishing-treacle-df2aea.netlify.app" target="_blank" rel="noopener noreferrer"><button class="btn_L_8">เข้าชมเว็บไซต์</button></a>
-                                                    <a href="https://github.com/Pheet0123/Bmi_cal" target="_blank" rel="noopener noreferrer"><button class="btn_GitHub">GitHub</button></a>
+                                                    <a href="Note.zip" target="_blank" rel="noopener noreferrer"><button class="btn_L_8">ดาวน์โหลด</button></a>
+                                                    <a href="https://github.com" target="_blank" rel="noopener noreferrer"><button class="btn_GitHub">GitHub</button></a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="btn_pf_3_phon">
-                                            <a href="https://tangerine-hotteok-8dbe16.netlify.app" target="_blank" rel="noopener noreferrer"><button class="btn_L_2_phon"><p>เข้าชมเว็บไซต์</p></button></a>
-                                            <a href="https://github.com/Pheet0123/Bmi_cal" target="_blank" rel="noopener noreferrer"><button class="btn_GitHub_phon"><p>GitHub</p></button></a>
+                                            <a href="NoteGUI Application.zip" target="_blank" rel="noopener noreferrer"><button class="btn_L_2_phon"><p>ดาวน์โหลด</p></button></a>
+                                            <a href="https://github.com" target="_blank" rel="noopener noreferrer"><button class="btn_GitHub_phon"><p>GitHub</p></button></a>
                                         </div>
                                 </div>
                             </div>
